# KeyZip

./: CMakeLists.txt  CMakeUserPresets.json
.cursor/plans/: add_compression_panel_84ef6e6d.plan.md
KeyZip/: CMakeLists.txt  keyzipwindow.cpp  keyzipwindow.h
QuickExtract/: CMakeLists.txt  archivehelper.cpp  archivehelper.h  compressengine.cpp  compressengine.h  compressoptionsdialog.cpp  compressoptionsdialog.h  compressoutstream.cpp  compressoutstream.h  extractcallback.cpp  extractcallback.h  extractengine.cpp  filewritecontext.h  filewritetask.cpp  filewritetask.h  guiddef.cpp  mainwindow.cpp  mainwindow.h  outstreamwrapper.cpp  outstreamwrapper.h  updatecallback.cpp  updatecallback.h
